--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </tr>
         <tr>
             <td>Task 6</td>
-            <td><a href="bootstrap_Task5.html">BootStrap Task 6 link</a></td>
+            <td><a href="bootstarp_Task6.html">BootStrap Task 6 link</a></td>
         </tr>
         <tr>
             <th colspan="2">JavaScript Tasks</th>
